chapitres/16/ingress-nginx-basic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: mailpit-secret
    # message to display with an appropiate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required for mailpit"
spec:
  ingressClassName: nginx
  rules:
  - host: "mailpit.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mailpit
            port:
              number: 8025
  tls:
    - secretName: eni-yannig-ovh-prod-tls
      hosts:
        - "mailpit.eni.yannig.ovh"
