chapitres/16/ingress-nginx-tls-using-annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
  annotations:
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: "mailpit.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: mailpit
            port:
              name: http
  tls:
    - secretName: "mailpit.eni.yannig.ovh"
      hosts: ["mailpit.eni.yannig.ovh"]
