chapitres/16/ingress-nginx-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit
spec:
  ingressClassName: nginx
  rules:
  - host: "mailpit.eni.yannig.ovh"
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: mailpit
            port:
              name: http
  tls:
    - secretName: eni-yannig-ovh-prod-tls
      hosts: ["mailpit.eni.yannig.ovh"]
