chapitres/16/allow-wordpress-mariadb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-wordpress-mariadb
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: wordpress
      ports:
        - protocol: TCP
          port: 3306
